[package]
authors     = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
description = "A Bevy Rougelike Toolkit"
edition     = "2021"
license     = "Apache-2.0 OR MIT"
name        = "brltk"
readme      = "README.md"
repository  = "https://github.com/YendorEngine/bevy_doryen"
version     = "0.1.0"

[workspace]
exclude = ["benches"]
members = [
    "tools/ci",
    # "tools/build-example-pages",
    # "tools/build-wasm-examples",
    # "errors",
    "crates/*",
]
resolver = "2"

[features]
ascii_terminal = ["bevy_ascii_terminal"]
bracket_lib    = ["bevy_bracket_lib"]
default        = ["doryen", "yendor_lib", "ascii_terminal"]
doryen         = ["bevy_doryen"]

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_render"] }
bevy_ascii_terminal = { path = "crates/bevy_ascii_terminal", optional = true, version = "0.1" }
bevy_bracket_lib = { path = "crates/bevy_bracket_lib", optional = true, version = "0.1" }
bevy_doryen = { path = "crates/bevy_doryen", optional = true, version = "0.1" }
brltk_common = { path = "crates/common", version = "0.1" }
yendor_lib = { git = "https://github.com/YendorEngine/yendor", optional = true, version = "0.1", features = [
    "roguelike",
] }

[[example]]
name              = "basic_bracket"
path              = "examples/basic_bracket.rs"
required-features = ["bracket_lib"]

[dev-dependencies]
bevy = "0.9"
