[package]
authors     = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
description = "A Bevy Rougelike Toolkit"
edition     = "2021"
license     = "Apache-2.0 OR MIT"
name        = "brltk"
readme      = "README.md"
repository  = "https://github.com/YendorEngine/bevy_doryen"
version     = "0.1.0"

[workspace]
exclude = ["benches"]
members = [
    "tools/ci",
    # "tools/build-example-pages",
    # "tools/build-wasm-examples",
    # "errors",
    "crates/*",
]
resolver = "2"

[features]
ascii_terminal = ["bevy_ascii_terminal"]
bracket_lib    = ["bevy_bracket_lib"]
default        = ["doryen", "yendor_lib"]
doryen         = ["bevy_doryen"]

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_render"] }
bevy_ascii_terminal = { path = "crates/bevy_ascii_terminal", optional = true, version = "0.1" }
bevy_bracket_lib = { path = "crates/bevy_bracket_lib", optional = true, version = "0.1" }
bevy_doryen = { path = "crates/bevy_doryen", optional = true, version = "0.1" }
brltk_common = { path = "crates/common", version = "0.1" }
yendor_lib = { git = "https://github.com/YendorEngine/yendor", optional = true, version = "0.1", features = [
    "roguelike",
] }

[dev-dependencies]
bevy                 = "0.9"
unicode-segmentation = "1"

# Doryen-rs
[[example]]
name = "doryen_alpha"
path = "examples/doryen/alpha.rs"

[[example]]
name = "doryen_basic"
path = "examples/doryen/basic.rs"

[[example]]
name = "doryen_blit"
path = "examples/doryen/blit.rs"

[[example]]
name = "doryen_exit"
path = "examples/doryen/exit.rs"

[[example]]
name = "doryen_fonts"
path = "examples/doryen/fonts.rs"

[[example]]
name = "doryen_image"
path = "examples/doryen/image.rs"

[[example]]
name = "doryen_perf"
path = "examples/doryen/perf.rs"

[[example]]
name = "doryen_resize"
path = "examples/doryen/resize.rs"

[[example]]
name = "doryen_subcell"
path = "examples/doryen/subcell.rs"

[[example]]
name = "doryen_text_input"
path = "examples/doryen/text_input.rs"

[[example]]
name = "doryen_unicode"
path = "examples/doryen/unicode.rs"

# Bracket-Lib
[[example]]
name              = "bracket_basic"
path              = "examples/bracket_lib/basic.rs"
required-features = ["bracket_lib"]

# ASCII Terminal
[[example]]
name              = "ascii_terminal_basic"
path              = "examples/ascii_terminal/basic.rs"
required-features = ["ascii_terminal"]
