[package]
edition = "2021"
name    = "bevy_bracket_lib"
publish = false
version = "0.1.0"

[dependencies]
bevy                = { version = "0.9", default-features = false }
bracket-bevy        = { git = "https://github.com/amethyst/bracket-lib" }
bracket-pathfinding = { git = "https://github.com/amethyst/bracket-lib" }
brltk_common        = { path = "../common" }
