[package]
edition = "2021"
license = "Apache-2.0 OR MIT"
name    = "bevy_bracket_lib"
publish = false
readme  = "../../README.md"
version = "0.1.0"

[dependencies]
bevy                = { version = "0.10", default-features = false }
bracket-bevy        = { git = "https://github.com/amethyst/bracket-lib" }
bracket-pathfinding = { git = "https://github.com/amethyst/bracket-lib" }
brltk_common        = { path = "../common", version = "0.1" }
