[package]
description = "Build an example for wasm"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "build-wasm-examples"
publish     = false
version     = "0.1.0"

[dependencies]
clap    = { version = "4", features = ["derive"] }
regex   = "1"
walkdir = "2"
xshell  = "0.2"
